integration_tests/src/snapshots/integration_tests__cnft_tests__mint_v2_transfer_v2__mint.snap
---
source: integration_tests/src/cnft_tests.rs
assertion_line: 443
expression: asset
---
{
  "interface": "V1_NFT",
  "id": "75YC6nCeRDTQcHyPiXAXC3qov4u8gyBYCR4tci3ZrCPt",
  "content": {
    "$schema": "https://schema.metaplex.com/nft1.0.json",
    "json_uri": "https://example.com/my-nft.json",
    "files": [],
    "metadata": {
      "name": "My NFT",
      "symbol": "",
      "token_standard": "NonFungible"
    },
    "links": {}
  },
  "authorities": [
    {
      "address": "DqkqFN7EawkTGFe3U3uoSHvAXSUkWzXGMihwtAzANLe1",
      "scopes": [
        "full"
      ]
    }
  ],
  "compression": {
    "eligible": false,
    "compressed": true,
    "data_hash": "4ZiRTMoP1qxu3zZeCxNTYJCVbkXFz6zUJCZkwxYvxbCk",
    "creator_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "collection_hash": "6rGYJwMJqUC3NjPyCf8dfkFAePunDWXcao572PPQDpKR",
    "asset_data_hash": "EKDHSGbrGztomDfuiV4iqiZ6LschDJPsFiXjZ83f92Md",
    "flags": 0,
    "asset_hash": "BYQ7vL6fLUchmeid2vNDVCQUgLjxSSrpuRubAHicYWHJ",
    "tree": "4zdaLwohgMvwJWmnn5MEinShE9PRzcSR5cqAsQK2XEt",
    "seq": 1,
    "leaf_id": 0
  },
  "grouping": [
    {
      "group_key": "collection",
      "group_value": "ETCx9sWCTbnkACKpCVHDaZjGn1SpwixxwqG4FfBPjjGf",
      "verified": true
    }
  ],
  "royalty": {
    "royalty_model": "creators",
    "target": null,
    "percent": 0.055,
    "basis_points": 550,
    "primary_sale_happened": false,
    "locked": false
  },
  "creators": [],
  "ownership": {
    "frozen": false,
    "non_transferable": false,
    "delegated": false,
    "delegate": null,
    "ownership_model": "single",
    "owner": "AAMwN4VGzRfTz5SYPZPBAqfkpWYtQfiyRCKPVyzszXip"
  },
  "supply": {
    "print_max_supply": 0,
    "print_current_supply": 0,
    "edition_nonce": null
  },
  "mutable": true,
  "burnt": false
}
